k3s/apps/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  labels:
    app.kubernetes.io/name: lidarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lidarr
  ports:
    - name: http
      port: 80
      targetPort: http
